# DigitalThread

./: .env.example  .gitignore  AGENTS.md  ANALYZE_WORKSPACE.md  ARCHITECTURE.md  CHANGELOG.md  README.md  docker-compose.yml
apps/api/: .env.example  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml  threadlite.db_old
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_editable_sysml.py  0003_authoritative_sources.py  0004_verification_evidence.py  0005_non_conformity.py  0006_change_request_lifecycle.py  0007_simulation_evidence.py  0008_operational_evidence.py  0009_fmi_placeholder_contract.py  0010_ncr_integrity_and_disposition.py  0011_requirement_criteria_and_ast_guard.py  0012_change_request_lifecycle_notes.py  0013_domain_profile_and_label_overrides.py
apps/api/app/: __init__.py  db.py  impact_service.py  main.py  models.py  schemas.py  seed_service.py  services.py  services_legacy.py
apps/api/app/core/: __init__.py
apps/api/app/services/: __init__.py  _common.py  baseline_service.py  block_service.py  change_request_service.py  component_service.py  configuration_service.py  evidence_service.py  federation_service.py  fmi_service.py  impact_views.py  import_service.py  link_service.py  (+6 more)
apps/api/docs/: API_REFERENCE.md  DATA_MODEL.md  DEPLOYMENT.md  FUNCTIONAL_ANALYSIS.md  IMPROVEMENT_ROADMAP.md  README_PROJECT.md  SECURITY_NOTES.md  TECHNICAL_ANALYSIS.md  TESTING_STRATEGY.md
apps/api/tests/: test_api.py  test_federation.py  test_services.py
apps/api/threadlite_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+179 files in other folders)
