[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threadlite-api"
version = "0.1.0"
description = "ThreadLite backend API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.29",
  "sqlmodel>=0.0.22",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
